tests/functional/lang/eval-fail-addDrvOutputDependencies-wrong-element-kind.err.exp
error:
       … while calling the 'addDrvOutputDependencies' builtin
         at /pwd/lang/eval-fail-addDrvOutputDependencies-wrong-element-kind.nix:9:4:
            8|
            9| in builtins.addDrvOutputDependencies drv.outPath
             |    ^
           10|

       error: `addDrvOutputDependencies` can only act on derivations, not on a derivation output such as 'out'
